docker/k8s/netshoots.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot
  namespace: ragflow  
  labels:
    app: netshoot
spec:
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
      - image: nicolaka/netshoot:latest
        name: netshoot
        securityContext:
          privileged: true    
        command:
        - sleep
        - infinity
        imagePullPolicy: IfNotPresent
